# 2.01.00 (49521) Mar 4, 2011
3/4/11 Redeploying due to a glitch with version numbering.
isotopes-and-atomic-mass: Changed title of the abundance indicator.
# 2.01.01 (49407) Mar 2, 2011
3/2/11 isotopes-and-atomic-mass: Publishing a snapshot version for review.
# 2.01.00 (49070) Feb 21, 2011
2/21/11 > Fixed an issue in Build an Atom where the game could crash if running with the timer turned off.
build-an-atom: Fixed an issue where an exception would occur at the end of the game if played without the timer running.
2/16/11 #2727, rewrite GameSettings to use properties exclusively, remove old-style constructors and accessor methods
isotopes-and-atomic-mass: Changed the abundance of tritium to "trace" from zero. 
isotopes-and-atomic-mass: Added a "Reset All" button to the first tab. 
build-an-atom: Fixed an issue where the Reset All button wasn't resetting the view.
isotopes-and-atomic-mass: Added a fixed-size representation of the electron cloud to the 1st tab. 
isotopes-and-atomic-mass: Added the element name indicator to the canvas just above the nucleus. 
isotopes-and-atomic-mass: Reduced number of neutrons in the bucket to 4 and adjusted the size and position of the bucket to compensate. 
isotopes-and-atomic-mass: Relocated the atom, neuron bucket, and symbol.  Part of new layout of this tab.
isotopes-and-atomic-mass: Relocated the legend and the periodic table on the canvas.
isotopes-and-atomic-mass: Made the lower portion of the periodic table look transparent, made the letters & boundaries darker.
isotopes-and-atomic-mass: Moved the stable/unstable label down a bit so it wouldn't overlap the heavier nuclei.
isotopes-and-atomic-mass: made the font size consistent for element name shown under the symbol.
# 2.00.03 (48196) Jan 24, 2011
1/24/11 Publishing for internal review
isotopes-and-atomic-mass: improved the look of the disabled part of the periodic table
isotopes-and-atomic-mass: Created 2nd tab, put a temporary sketch on the tab.